2020-01-07  Allen D. Ball  <ball@hcf.dev>

	* Initial support for UPNP service and device annotations.

2020-01-06  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 1.1-SNAPSHOT.

2020-01-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 1.0.3.
	Use ball:parent:20200102.0.

2019-12-06  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 1.0.2.
	Use ball:parent:20191206.0.

2019-09-08  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 1.0.1.

	* src/main/java/ball/upnp/ssdp/SSDPResponse.java:
	Record the InetAddress from the DatagramPacket.

2019-05-02  Allen D. Ball  <ball@sol.local>

	* pom.xml:
	Released version 1.0.0.
	Merged ball.ssdp artifact to ball.upnp.ssdp.
